overflow-x: hidden removed and intro image fixed for responsive

--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@
 body {
   background-color: #ececec;
   font-family: 'Roboto', sans-serif;
-  overflow-x:hidden;
 }
 
 header {
@@ -49,20 +48,28 @@ header ul {
   background: #8e9eab;  /* fallback for old browsers */
   background: -webkit-linear-gradient(to top, #eef2f3, #8e9eab);  /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to top, #eef2f3, #8e9eab); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  background-image: url(img/img1.jpeg);
-  background-size: img1;
+  background-image: url(img/img2.jpeg);
+  
+  background-repeat:no-repeat;
+  background-size:cover;
+  background-position:center;
+
 }
 
 #intro p{
   width: 50%;
   margin: 0 auto;
   text-align: center;
+  color: #fff;
+
 }
 
 #intro h1{
   font-size: 3em;
   padding: 20px;
   font-family: 'Poiret One', cursive;
+  color: #fff;
+
 }
 
 .cards-container {
